Fix some issues detected by sonar (#870)
* Correctly skip bytes

* Suppress warning on controlled input

* Improve exception handling

* Fix issues reported by sonar

* Format code with spotless

* Suppress some warnings

* Fix sonar issues and clean code