@@ -25,7 +25,6 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 import javax.sql.DataSource;
 import org.apache.baremaps.database.copy.CopyWriter;
 import org.apache.baremaps.openstreetmap.model.Info;
@@ -66,9 +65,20 @@ public class RelationRepository implements Repository<Long, Relation> {
    * @param dataSource
    */
   public RelationRepository(DataSource dataSource) {
-    this(dataSource, "public", "osm_relations", "id", "version", "uid", "timestamp", "changeset",
+    this(
+        dataSource,
+        "public",
+        "osm_relations",
+        "id",
+        "version",
+        "uid",
+        "timestamp",
+        "changeset",
         "tags",
-        "member_refs", "member_types", "member_roles", "geom");
+        "member_refs",
+        "member_types",
+        "member_roles",
+        "geom");
   }
 
   /**
@@ -88,10 +98,20 @@ public class RelationRepository implements Repository<Long, Relation> {
    * @param memberRoles
    * @param geometryColumn
    */
-  public RelationRepository(DataSource dataSource, String schema, String table,
+  @SuppressWarnings("squid:S107")
+  public RelationRepository(
+      DataSource dataSource,
+      String schema,
+      String table,
       String idColumn,
-      String versionColumn, String uidColumn, String timestampColumn, String changesetColumn,
-      String tagsColumn, String memberRefs, String memberTypes, String memberRoles,
+      String versionColumn,
+      String uidColumn,
+      String timestampColumn,
+      String changesetColumn,
+      String tagsColumn,
+      String memberRefs,
+      String memberTypes,
+      String memberRoles,
       String geometryColumn) {
     var fullTableName = String.format("%1$s.%2$s", schema, table);
     this.dataSource = dataSource;
@@ -295,11 +315,11 @@ public class RelationRepository implements Repository<Long, Relation> {
           writer.writeLong(value.getInfo().getChangeset());
           writer.writeJsonb(JsonbMapper.toJson(value.getTags()));
           writer.writeLongList(
-              value.getMembers().stream().map(Member::getRef).collect(Collectors.toList()));
+              value.getMembers().stream().map(Member::getRef).toList());
           writer.writeIntegerList(value.getMembers().stream().map(Member::getType)
-              .map(MemberType::ordinal).collect(Collectors.toList()));
+              .map(MemberType::ordinal).toList());
           writer
-              .write(value.getMembers().stream().map(Member::getRole).collect(Collectors.toList()));
+              .write(value.getMembers().stream().map(Member::getRole).toList());
           writer.writeGeometry(value.getGeometry());
         }
       }
