@@ -21,12 +21,10 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
-import java.io.IOException;
-import java.sql.SQLException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.baremaps.database.repository.Constants;
+import org.apache.baremaps.openstreetmap.model.Element;
 import org.apache.baremaps.openstreetmap.model.Relation;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
@@ -37,7 +35,7 @@ class RelationRepositoryTest extends PostgresRepositoryTest {
   RelationRepository relationRepository;
 
   @BeforeEach
-  void init() throws SQLException, IOException {
+  void init() {
     relationRepository = new RelationRepository(dataSource());
   }
 
@@ -55,7 +53,7 @@ class RelationRepositoryTest extends PostgresRepositoryTest {
         Arrays.asList(Constants.RELATION_2, Constants.RELATION_3, Constants.RELATION_4);
     relationRepository.put(relations);
     assertIterableEquals(relations, relationRepository
-        .get(relations.stream().map(e -> e.getId()).collect(Collectors.toList())));
+        .get(relations.stream().map(Element::getId).toList()));
   }
 
   @Test
@@ -72,9 +70,9 @@ class RelationRepositoryTest extends PostgresRepositoryTest {
     List<Relation> relations =
         Arrays.asList(Constants.RELATION_2, Constants.RELATION_3, Constants.RELATION_4);
     relationRepository.put(relations);
-    relationRepository.delete(relations.stream().map(e -> e.getId()).collect(Collectors.toList()));
+    relationRepository.delete(relations.stream().map(Element::getId).toList());
     assertIterableEquals(Arrays.asList(null, null, null), relationRepository
-        .get(relations.stream().map(e -> e.getId()).collect(Collectors.toList())));
+        .get(relations.stream().map(Element::getId).toList()));
   }
 
   @Test
@@ -84,6 +82,6 @@ class RelationRepositoryTest extends PostgresRepositoryTest {
         Arrays.asList(Constants.RELATION_2, Constants.RELATION_3, Constants.RELATION_4);
     relationRepository.copy(relations);
     assertIterableEquals(relations, relationRepository
-        .get(relations.stream().map(e -> e.getId()).collect(Collectors.toList())));
+        .get(relations.stream().map(Element::getId).toList()));
   }
 }
